Add selection endpoint and restrict CORS